[package]
name = "supod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
csv = "1.4.0"
quick-xml = "0.39.0"
reqwest = { version = "0.13.1", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
mockito = "1.7.1"
predicates = "3.1.3"
tempfile = "3.24.0"
